# diffusion-downscaling

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: lint.yaml
scripts/: build_dataset.py  inference.py  train.py
scripts/configs/: paths.py
scripts/configs/configs/: cnn_deterministic.py  cnn_deterministic_T.py  defaults.py  diffusion_crb_vpsde.py  diffusion_p.py  diffusion_pT.py  diffusion_pT_cesm.py  diffusion_pT_vpsde.py  example.py  gan.py
scripts/configs/metrics/: basic_eval_metrics.py
scripts/configs/sampling/: deterministic_eval.py  example.py  gan_eval.py  karras_all_var_pT.py  vpsde.py
scripts/configs/variables/: all_var_T.py  all_var_pT.py  all_var_predict_p.py
src/diffusion_downscaling/data/: constants.py  data_loading.py  dataset_building.py  processing.py  scaling.py
src/diffusion_downscaling/evaluation/: consts.py  eval.py  metrics.py  plotting.py  spatial_aggregation.py  utils.py
src/diffusion_downscaling/lightning/: utils.py
src/diffusion_downscaling/lightning/models/: base.py  deterministic.py  diffusion.py  gan.py  karras_diffusion.py
src/diffusion_downscaling/sampling/: dps.py  k_sampling.py  sampling.py  utils.py
src/diffusion_downscaling/yang_cm/: README.md  cwgan_patch.py  nn.py  unet.py  utils.py
