[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "diffusion-downscaling"
version = "0.0.1"
authors = [
  { name="Alex Saoulis", email="a.saoulis@ucl.ac.uk" },
]
description = "Diffusion models for downscaling precipitation"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

dynamic= ["dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}